# Hotpot-Tech-Feed

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Hotpot_Tech_Feed_Intro.pptx  PLAN.md  README.md  backup.sh  crontab.example  docker-compose.yml  harness_prompts.md  plan_project.md  restore.sh  start.sh
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_search_logs.py  0003_primary_category.py  0004_click_count.py  0005_source_discovery.py  0006_item_exposure.py  0007_security_item_scores.py
backend/app/: cli.py  main.py
backend/app/adapters/: __init__.py  arxiv.py  base.py  doonsec.py  html.py  html_index.py  rss.py
backend/app/api/routes/: contribute.py  discovery.py  health.py  items.py  security.py  sources.py
backend/app/core/: celery_app.py  config.py  db.py  logging.py
backend/app/models/: __init__.py  discovery.py  item.py  search_log.py  security_score.py  source.py
backend/app/schemas/: item.py  security.py  source.py
backend/app/scripts/: scheduler.py  seed.py
backend/app/services/: canonicalize.py  contribute.py  dedup.py  digest.py  discovery.py  email.py  embeddings.py  extract.py  llm.py  qdrant.py  security_scoring.py
backend/app/tasks/: enrich.py  ingest.py
backend/data/: seed_candidates.yaml  seed_sources.yaml
deploy/: gateway.Dockerfile  nginx.conf
docs/: DB.md  build_security_slides.py  build_slides.py  content_quality_backfill_status.md  content_quality_upgrade_plan.md  new_sore.md  slides.md  slides.pptx  (+1 more)
(+37 files in other folders)
